--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,13 @@ header{
 h1{
     font-weight: 200;
     margin: 0;
+    color: hsl(234, 12%, 34%);
 }
 
 h1 span{
     font-weight: 600;
     margin: 0; 
+    color: hsl(234, 12%, 34%);
 }
 
 h3{
@@ -35,13 +37,16 @@ p{
  color: hsl(229, 6%, 66%);
  font-size: .8rem;
 }
-   
+
+header p{
+    font-size: .9rem;  
+}
 
  .container {
     display: flex;
     flex-wrap: wrap;
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 3em auto;
     justify-content: center;
 }
 
@@ -69,6 +74,7 @@ p{
     -webkit-box-shadow: 3px 3px 7px 2px #ccc;
     box-shadow:         3px 3px 7px 2px #ccc;
     width: 350px; 
+    height: 250px;
     border-radius: 5px;
     padding: 1.75em;
     margin: 15px;
@@ -76,7 +82,9 @@ p{
 
 .card img{
     display: block;
+    margin-top: 4em;
     margin-left: auto;
+    margin-bottom: 0;
 }
 
 .attribution{
